welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: not found: value length
	for(w<-0 to length-1) {
                    ^